--- a/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/edit/EditClienteGUI.form
+++ b/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/edit/EditClienteGUI.form
@@ -743,6 +743,9 @@
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCEstadoCivilActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
