--- a/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/lista/ListClientesGUI.form
+++ b/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/lista/ListClientesGUI.form
@@ -397,6 +397,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jBescolher">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/br/com/getsoftware/davicalcados/icons/Arrow-icon.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Escolher"/>
           </Properties>
           <Events>
